--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-    <h1><bold>digital natives</bold></h1>
+    <div> <img class="digital_natives" src="./assets/digital screenshot.png" alt="digital natives"></div>
     <section class="text">We luisteren, we challengen en we doen net even dat stapje extra. Zo gidsen we onze klanten voorwaarts en dragen we bij
     aan een betere digitale wereld.</section>
 
