--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <div><img class="logo" src="./assets/logo screenshot.png" alt="logo digital natives"></div>
+        <div><img class="logo" src="./assets/logo screenshot.png" alt="logo digital natives"></div><div><img class="hamburger_placeholder" src="./assets/hamburger_placeholder.png" alt="hamburger menu"></div>
     </header>
 
     <main>
