--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <div><img class="logo" src="./assets/logo screenshot.png" alt="logo digital natives"></div><div><img class="hamburger_placeholder" src="./assets/hamburger_placeholder.png" alt="hamburger menu"></div>
     </header>
 
+    <div> <img class="digital_natives" src="./assets/digital screenshot.png" alt="digital natives"></div>
     <main>
-        <div> <img class="digital_natives" src="./assets/digital screenshot.png" alt="digital natives"></div>
+        
         <section class="text">We luisteren, we challengen en we doen net even dat stapje extra. Zo gidsen we onze
             klanten voorwaarts en dragen we bij
             aan een betere digitale wereld.</section>
@@ -194,7 +195,7 @@
 
         <section class="text_block">
             <div>
-                <h3>Core values</h3>
+                <h3 class="grey">Core values</h3>
                 <h2>Wij zijn digital natives</h2>
             </div>
         </section>
@@ -229,6 +230,22 @@
                 omstandigheden. We begrijpen heel goed wat er nodig is om in deze technologische wereld het verschil te
                 maken.
             </p>
+
+        </section>
+
+        <section class="img_display"></section>
+
+        <section class="text">
+            <div>
+                <h3 class="grey">Blijf op de hoogte</h3>
+                <h2>digital natives nieuws</h2>
+            </div>
+
+            <p>Blijf op de hoogte van alle veranderingen bij Digital Natives. Elke week publiceren we nieuws over wat er speelt bij
+            Digital Natives en bij onze klanten.</p>
+
+            <a href="https://www.digitalnatives.nl/magazine/articles/digital-natives">Ontdek alle updates</a>
+
 
         </section>
 
