--- a/index.html
+++ b/index.html
@@ -233,7 +233,9 @@
 
         </section>
 
-        <section class="img_display"></section>
+        <section class="img_display">
+            <img class="display_imgs" src="./assets/placeholder_img.png" alt="fotos">
+        </section>
 
         <section class="text">
             <div>
