--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="team-container">
             <div class="team-members">
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./">
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="developer on laptop">
                     <img class="team-member-img" src="./assets/Digital-Natives-Bobby.png" alt=" foto van Bobby van Rijn">
                     <div class="team-member-details">
                         <div class="member-name">Bobby van Rijn</div>
@@ -49,6 +49,7 @@
                 </div>
     
                 <div class="team-member-card">
+                    <img class="team-member-sprite" src="./assets/clueman.gif" alt="developer on laptop">
                     <img class="team-member-img" src="./assets/Digital-Natives-Lars-1_2021-06-16-093903_nlkh.jpg"
                         alt=" foto van Lars Dol">
                     <div class="team-member-details">
