--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
 
                 <div class="team-member-card">
                     <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
-                    <img class="team-member-img" src="./assets/Digital-Natives-Erik-1_2021-06-16-093453_pjyn.jpg"
-                        alt=" foto van Erik de Vreede">
+                    <img class="team-member-img" src="./assets/foto-placeholder.jpg"
+                        alt=" foto van placeholder">
                     <div class="team-member-details">
                         <div class="member-name">Join our team</div>
                         <div class="member-job">watch the magic happen</div>
@@ -287,20 +287,20 @@
 
         </section>
 
-        <section class="list_news">
-            <ul>
-                <li><a href="https://www.digitalnatives.nl/magazine/inclusie-op-het-web-tijdens-adnight">
-                        <img class="img-links" src="" alt="img link" <h4>UX Treasure Hunt - Inclusie op het web tijdens Adnight
+        <section class="list-news">
+            <ul class="news-list">
+                <li class="li-news"><a href="https://www.digitalnatives.nl/magazine/inclusie-op-het-web-tijdens-adnight">
+                        <img class="img-links" src="./assets/Adnight-UX-.jpg" alt="img link" <h4>UX Treasure Hunt - Inclusie op het web tijdens Adnight
                         </h4>
                         <p>Digital Natives nieuws</p>
                     </a></li>
                 <li><a href="https://www.digitalnatives.nl/magazine/inclusie-op-het-web-tijdens-adnight">
-                        <img class="img-links" src="" alt="img link" <h4>UX Treasure Hunt - Inclusie op het web tijdens Adnight
+                        <img class="img-links" src="./assets/Adnight-Digital-Natives-Mission-Possible.jpg" alt="img link" <h4>UX Treasure Hunt - Inclusie op het web tijdens Adnight
                         </h4>
                         <p>Digital Natives nieuws</p>
                     </a></li>
                 <li><a href="https://www.digitalnatives.nl/magazine/inclusie-op-het-web-tijdens-adnight">
-                        <img class="img-links" src="" alt="img link" <h4>UX Treasure Hunt - Inclusie op het web tijdens Adnight
+                        <img class="img-links" src="./assets/Krauthammer.png" alt="img link" <h4>UX Treasure Hunt - Inclusie op het web tijdens Adnight
                         </h4>
                         <p>Digital Natives nieuws</p>
                     </a></li>
