--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="team-container">
             <div class="team-members">
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="developer on laptop"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="developer on laptop">
                     <img class="team-member-img" src="./assets/Digital-Natives-Bobby.png"
                         alt=" foto van Bobby van Rijn">
                     <div class="team-member-details">
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="jim carreys riddler pixel sprite"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="jim carreys riddler pixel sprite">
                     <img class="team-member-img" src="./assets/Digital-Natives-Lars-1_2021-06-16-093903_nlkh.jpg"
                         alt=" foto van Lars Dol">
                     <div class="team-member-details">
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Loes-1_2021-06-16-093930_hazm.jpg"
                         alt=" foto van Loes Verputten">
                     <div class="team-member-details">
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="developer on laptop"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="developer on laptop">
                     <img class="team-member-img" src="./assets/Digital-Natives-Ezra-1_2021-06-16-093507_iihz.jpg"
                         alt=" foto van Ezra Pool">
                     <div class="team-member-details">
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Renske-1_2021-06-16-094002_yfnk.jpg"
                         alt=" foto van Renske Lansink">
                     <div class="team-member-details">
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img"
                         src="./assets/Digital-Natives-wit_HR_The-Headhshot-Studio_09_2022-04-26-101635_xkws.jpg"
                         alt=" foto van Frederike Hurenkamp">
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Koos-1_2021-06-16-093821_ylcq.jpg"
                         alt=" foto van Koos Bavinck">
                     <div class="team-member-details">
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Nadia-1_2021-06-16-094638_sgjs.jpg"
                         alt=" foto van Nadia Scherpenhuijzen">
                     <div class="team-member-details">
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Tammy-1_2021-06-16-094338_gxsu.jpg"
                         alt=" foto van Tammy Joubert">
                     <div class="team-member-details">
@@ -131,7 +131,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Samuel-1_2021-06-16-094101_npqp.jpg"
                         alt=" foto van Samuel Fischer">
                     <div class="team-member-details">
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Sander-1_2021-06-16-094133_czfi.jpg"
                         alt=" foto van Sander van der Vliet">
                     <div class="team-member-details">
@@ -151,7 +151,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Riekus-1_2021-06-16-094029_dquk.jpg"
                         alt=" foto van Riekus van Montfort">
                     <div class="team-member-details">
@@ -161,7 +161,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Sophie-1_2021-06-16-094238_hgxa.jpg"
                         alt=" foto van Sophie Duindam">
                     <div class="team-member-details">
@@ -171,7 +171,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Elmar-1_2021-06-16-093217_pbvo.jpg"
                         alt=" foto van Elmar Kruitwagen">
                     <div class="team-member-details">
@@ -181,7 +181,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Freek-1_2021-06-16-093606_eddi.jpg"
                         alt=" foto van Freek van Rijt">
                     <div class="team-member-details">
@@ -191,7 +191,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Viola-1_2021-06-16-094502_kpjb.jpg"
                         alt=" foto van Viola Puhalovic-krijnen">
                     <div class="team-member-details">
@@ -201,7 +201,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Erik-1_2021-06-16-093453_pjyn.jpg"
                         alt=" foto van Erik de Vreede">
                     <div class="team-member-details">
@@ -211,7 +211,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/foto-placeholder.jpg"
                         alt=" foto van placeholder">
                     <div class="team-member-details">
