--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;400&family=Sen:wght@400;700&display=swap"
         rel="stylesheet">
 </head>
-<title>digital natives</title>
+<title>Digital natives</title>
 
 <body>
     <header>
@@ -39,9 +39,9 @@
         <section class="team-container">
             <div class="team-members">
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="developer on laptop">
-                    <img class="team-member-img" src="./assets/Digital-Natives-Bobby.png"
-                        alt=" foto van Bobby van Rijn">
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="">
+                    <img class="team-member-img-alt" src="./assets/Digital-Natives-Elmar-1_2021-06-16-093217_pbvo.jpg" alt="">
+                    <img class="team-member-img" src="./assets/Digital-Natives-Bobby.png" alt=" foto van Bobby van Rijn">
                     <div class="team-member-details">
                         <div class="member-name">Bobby van Rijn</div>
                         <div class="member-job">Frontend Developer</div>
