--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
             <div class="team-members">
                 <div class="team-member-card">
                     <img class="team-member-sprite" src="./assets/developer.gif" alt="">
-                    <img class="team-member-img-alt" src="./assets/Digital-Natives-Elmar-1_2021-06-16-093217_pbvo.jpg" alt="">
                     <img class="team-member-img" src="./assets/Digital-Natives-Bobby.png" alt=" foto van Bobby van Rijn">
                     <div class="team-member-details">
                         <div class="member-name">Bobby van Rijn</div>
@@ -211,7 +210,7 @@
 
                 <div class="team-member-card">
                     <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
-                    <img class="team-member-img" src="./assets/foto-placeholder.jpg"
+                    <img class="team-join-img" src="./assets/foto-placeholder.jpg"
                         alt=" foto van placeholder">
                     <div class="team-member-details">
                         <div class="member-name">Join our team</div>
