--- a/index.html
+++ b/index.html
@@ -213,6 +213,11 @@
                     </div>
                 </div>
             </div>
+
+            <!-- take a picture -->
+
+
+
         </section>
 
         <section class="text2">
