--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
 
             <!-- take a picture -->
 
+            <video id="video" width"640" height="480" autoplay></video>
+            <button id="snap">take a photo</button>
+            <canvas id="canvas" width="640" height="480"></canvas>
+
 
 
         </section>
