--- a/index.html
+++ b/index.html
@@ -204,9 +204,11 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
-                    <img class="team-join-img" src="./assets/foto-placeholder.jpg"
-                        alt=" foto van placeholder">
+                    <div>
+                        <video id="video" height="200" autoplay></video>
+                        <button id="snap">take a photo</button>
+                        <canvas id="canvas" data-hidden="true" width="640" height="480"></canvas>  
+                    </div>
                     <div class="team-member-details">
                         <div class="member-name">Join our team</div>
                         <div class="member-job">watch the magic happen</div>
@@ -216,9 +218,6 @@
 
             <!-- take a picture -->
 
-            <video id="video" width"640" height="480" autoplay></video>
-            <button id="snap">take a photo</button>
-            <canvas id="canvas" width="640" height="480"></canvas>
 
 
 
