--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="nl">
 <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <head>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<link rel="stylesheet" href="./style.css">
+
+<head>
     <title>Digital natives</title>
 </head>
 
@@ -35,7 +36,8 @@
             <div class="team-members">
                 <div class="team-member-card">
                     <img class="team-member-sprite" src="./assets/developer.gif" alt="">
-                    <img class="team-member-img" src="./assets/Digital-Natives-Bobby.png" alt=" foto van Bobby van Rijn">
+                    <img class="team-member-img" src="./assets/Digital-Natives-Bobby.png"
+                        alt=" foto van Bobby van Rijn">
                     <div class="team-member-details">
                         <div class="member-name">Bobby van Rijn</div>
                         <div class="member-job">Frontend Developer</div>
@@ -207,7 +209,7 @@
                     <div>
                         <video id="video" height="200" autoplay></video>
                         <button id="snap">take a photo</button>
-                        <canvas id="canvas" data-hidden="true" width="640" height="480"></canvas>  
+                        <canvas id="canvas" data-hidden="true" width="640" height="480"></canvas>
                     </div>
                     <div class="team-member-details">
                         <div class="member-name">Join our team</div>
@@ -290,18 +292,22 @@
 
         <section class="list-news">
             <ul class="news-list">
-                <li class="li-news"><a href="https://www.digitalnatives.nl/magazine/inclusie-op-het-web-tijdens-adnight">
-                        <img class="img-links" src="./assets/Adnight-UX-.jpg" alt="img link" <h4>UX Treasure Hunt - Inclusie op het web tijdens Adnight
+                <li class="li-news"><a
+                        href="https://www.digitalnatives.nl/magazine/inclusie-op-het-web-tijdens-adnight">
+                        <img class="img-links" src="./assets/Adnight-UX-.jpg" alt="img link" <h4>UX Treasure Hunt -
+                        Inclusie op het web tijdens Adnight
                         </h4>
                         <p>Digital Natives nieuws</p>
                     </a></li>
                 <li><a href="https://www.digitalnatives.nl/magazine/inclusie-op-het-web-tijdens-adnight">
-                        <img class="img-links" src="./assets/Adnight-Digital-Natives-Mission-Possible.jpg" alt="img link" <h4>UX Treasure Hunt - Inclusie op het web tijdens Adnight
+                        <img class="img-links" src="./assets/Adnight-Digital-Natives-Mission-Possible.jpg"
+                            alt="img link" <h4>UX Treasure Hunt - Inclusie op het web tijdens Adnight
                         </h4>
                         <p>Digital Natives nieuws</p>
                     </a></li>
                 <li><a href="https://www.digitalnatives.nl/magazine/inclusie-op-het-web-tijdens-adnight">
-                        <img class="img-links" src="./assets/Krauthammer.png" alt="img link" <h4>UX Treasure Hunt - Inclusie op het web tijdens Adnight
+                        <img class="img-links" src="./assets/Krauthammer.png" alt="img link" <h4>UX Treasure Hunt -
+                        Inclusie op het web tijdens Adnight
                         </h4>
                         <p>Digital Natives nieuws</p>
                     </a></li>
@@ -320,7 +326,7 @@
     </main>
 
     <footer>
-    
+
     </footer>
     <script src="./main.js"></script>
 
