--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="team-container">
             <div class="team-members">
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="jim carreys riddler pixel sprite"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Bobby.png"
                         alt=" foto van Bobby van Rijn">
                     <div class="team-member-details">
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="jim carreys riddler pixel sprite">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="jim carreys riddler pixel sprite"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Lars-1_2021-06-16-093903_nlkh.jpg"
                         alt=" foto van Lars Dol">
                     <div class="team-member-details">
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Loes-1_2021-06-16-093930_hazm.jpg"
                         alt=" foto van Loes Verputten">
                     <div class="team-member-details">
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="developer on laptop">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="developer on laptop"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Ezra-1_2021-06-16-093507_iihz.jpg"
                         alt=" foto van Ezra Pool">
                     <div class="team-member-details">
@@ -75,7 +75,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Renske-1_2021-06-16-094002_yfnk.jpg"
                         alt=" foto van Renske Lansink">
                     <div class="team-member-details">
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img"
                         src="./assets/Digital-Natives-wit_HR_The-Headhshot-Studio_09_2022-04-26-101635_xkws.jpg"
                         alt=" foto van Frederike Hurenkamp">
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Koos-1_2021-06-16-093821_ylcq.jpg"
                         alt=" foto van Koos Bavinck">
                     <div class="team-member-details">
@@ -106,7 +106,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Nadia-1_2021-06-16-094638_sgjs.jpg"
                         alt=" foto van Nadia Scherpenhuijzen">
                     <div class="team-member-details">
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Tammy-1_2021-06-16-094338_gxsu.jpg"
                         alt=" foto van Tammy Joubert">
                     <div class="team-member-details">
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Samuel-1_2021-06-16-094101_npqp.jpg"
                         alt=" foto van Samuel Fischer">
                     <div class="team-member-details">
@@ -136,7 +136,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Sander-1_2021-06-16-094133_czfi.jpg"
                         alt=" foto van Sander van der Vliet">
                     <div class="team-member-details">
@@ -146,7 +146,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Riekus-1_2021-06-16-094029_dquk.jpg"
                         alt=" foto van Riekus van Montfort">
                     <div class="team-member-details">
@@ -156,7 +156,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Sophie-1_2021-06-16-094238_hgxa.jpg"
                         alt=" foto van Sophie Duindam">
                     <div class="team-member-details">
@@ -166,7 +166,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Elmar-1_2021-06-16-093217_pbvo.jpg"
                         alt=" foto van Elmar Kruitwagen">
                     <div class="team-member-details">
@@ -176,7 +176,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Freek-1_2021-06-16-093606_eddi.jpg"
                         alt=" foto van Freek van Rijt">
                     <div class="team-member-details">
@@ -186,7 +186,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Viola-1_2021-06-16-094502_kpjb.jpg"
                         alt=" foto van Viola Puhalovic-krijnen">
                     <div class="team-member-details">
@@ -196,7 +196,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
                     <img class="team-member-img" src="./assets/Digital-Natives-Erik-1_2021-06-16-093453_pjyn.jpg"
                         alt=" foto van Erik de Vreede">
                     <div class="team-member-details">
@@ -206,7 +206,7 @@
                 </div>
 
                 <div class="team-member-card">
-                    <div>
+                    <div><!-- take a picture -->
                         <video id="video" height="200" autoplay></video>
                         <button id="snap">take a photo</button>
                         <canvas id="canvas" data-hidden="true" width="640" height="480"></canvas>
@@ -218,7 +218,7 @@
                 </div>
             </div>
 
-            <!-- take a picture -->
+        
 
 
 
