--- a/index.html
+++ b/index.html
@@ -206,19 +206,26 @@
                 </div>
 
                 <div class="team-member-card">
+                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat"> -->
+                    <img class="team-member-img" src="./assets/foto-placeholder.jpg" alt=" placeholder_img">
+                    <div class="team-member-details">
+                        <div class="member-name">Join our team</div>
+                        <div class="member-job"></div>
+                    </div>
+                </div>
+
+                <div class="team-member-card">
                     <div><!-- take a picture -->
                         <video id="video" height="200" autoplay></video>
                         <button id="snap">take a photo</button>
                         <canvas id="canvas" data-hidden="true" width="640" height="480"></canvas>
                     </div>
-                    <div class="team-member-details">
-                        <div class="member-name">Join our team</div>
-                        <div class="member-job">watch the magic happen</div>
-                    </div>
                 </div>
             </div>
 
-        
+            </div>
+
+
 
 
 
