--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <div> <img class="digital-natives" src="./assets/digital screenshot.png" alt="digital natives"></div>
     <main>
+    
 
         <section class="text">We luisteren, we challengen en we doen net even dat stapje extra. Zo gidsen we onze
             klanten voorwaarts en dragen we bij
@@ -35,7 +36,7 @@
         <section class="team-container">
             <div class="team-members">
                 <div class="team-member-card">
-                    <!-- <img class="team-member-sprite" src="./assets/developer.gif" alt="jim carreys riddler pixel sprite"> -->
+                    <img class="team-member-sprite" src="./assets/developer.gif" alt="jim carreys riddler pixel sprite">
                     <img class="team-member-img" src="./assets/Digital-Natives-Bobby.png"
                         alt=" foto van Bobby van Rijn">
                     <div class="team-member-details">
