--- a/index.html
+++ b/index.html
@@ -216,15 +216,16 @@
                 </div>
 
                 <div class="team-member-card">
-                    <div><!-- take a picture -->
-                        <video id="video" height="200" autoplay></video>
-                        <button id="snap">take a photo</button>
-                        <canvas id="canvas" data-hidden="true" width="640" height="480"></canvas>
+                    <div>
                     </div>
                 </div>
             </div>
 
             </div>
+            <!-- take a picture -->
+            <video id="video" height="200" autoplay></video>
+            <button id="snap">take a photo</button>
+            <canvas id="canvas" data-hidden="true" width="640" height="480"></canvas>
 
 
 
