--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         <section class="team-container">
             <div class="team-members">
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="jim carreys riddler pixel sprite">
                     <img class="team-member-img" src="./assets/Digital-Natives-Bobby.png"
                         alt=" foto van Bobby van Rijn">
                     <div class="team-member-details">
@@ -46,7 +45,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="jim carreys riddler pixel sprite">
                     <img class="team-member-img" src="./assets/Digital-Natives-Lars-1_2021-06-16-093903_nlkh.jpg"
                         alt=" foto van Lars Dol">
                     <div class="team-member-details">
@@ -56,7 +54,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Loes-1_2021-06-16-093930_hazm.jpg"
                         alt=" foto van Loes Verputten">
                     <div class="team-member-details">
@@ -66,7 +63,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="developer on laptop">
                     <img class="team-member-img" src="./assets/Digital-Natives-Ezra-1_2021-06-16-093507_iihz.jpg"
                         alt=" foto van Ezra Pool">
                     <div class="team-member-details">
@@ -76,7 +72,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Renske-1_2021-06-16-094002_yfnk.jpg"
                         alt=" foto van Renske Lansink">
                     <div class="team-member-details">
@@ -86,7 +81,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img"
                         src="./assets/Digital-Natives-wit_HR_The-Headhshot-Studio_09_2022-04-26-101635_xkws.jpg"
                         alt=" foto van Frederike Hurenkamp">
@@ -97,7 +91,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Koos-1_2021-06-16-093821_ylcq.jpg"
                         alt=" foto van Koos Bavinck">
                     <div class="team-member-details">
@@ -107,7 +100,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Nadia-1_2021-06-16-094638_sgjs.jpg"
                         alt=" foto van Nadia Scherpenhuijzen">
                     <div class="team-member-details">
@@ -117,7 +109,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Tammy-1_2021-06-16-094338_gxsu.jpg"
                         alt=" foto van Tammy Joubert">
                     <div class="team-member-details">
@@ -127,7 +118,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Samuel-1_2021-06-16-094101_npqp.jpg"
                         alt=" foto van Samuel Fischer">
                     <div class="team-member-details">
@@ -137,7 +127,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Sander-1_2021-06-16-094133_czfi.jpg"
                         alt=" foto van Sander van der Vliet">
                     <div class="team-member-details">
@@ -147,7 +136,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Riekus-1_2021-06-16-094029_dquk.jpg"
                         alt=" foto van Riekus van Montfort">
                     <div class="team-member-details">
@@ -157,7 +145,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Sophie-1_2021-06-16-094238_hgxa.jpg"
                         alt=" foto van Sophie Duindam">
                     <div class="team-member-details">
@@ -167,7 +154,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Elmar-1_2021-06-16-093217_pbvo.jpg"
                         alt=" foto van Elmar Kruitwagen">
                     <div class="team-member-details">
@@ -177,7 +163,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Freek-1_2021-06-16-093606_eddi.jpg"
                         alt=" foto van Freek van Rijt">
                     <div class="team-member-details">
@@ -187,7 +172,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Viola-1_2021-06-16-094502_kpjb.jpg"
                         alt=" foto van Viola Puhalovic-krijnen">
                     <div class="team-member-details">
@@ -197,7 +181,6 @@
                 </div>
 
                 <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
                     <img class="team-member-img" src="./assets/Digital-Natives-Erik-1_2021-06-16-093453_pjyn.jpg"
                         alt=" foto van Erik de Vreede">
                     <div class="team-member-details">
@@ -206,26 +189,11 @@
                     </div>
                 </div>
 
-                <div class="team-member-card">
-                    <img class="team-member-sprite" src="./assets/developer.gif" alt="pixel art cat">
-                    <img class="team-member-img" src="./assets/foto-placeholder.jpg" alt=" placeholder_img">
-                    <div class="team-member-details">
-                        <div class="member-name">Join our team</div>
-                        <div class="member-job"></div>
-                    </div>
-                </div>
-
-                <div class="team-member-card">
-                    <div>
-                    </div>
-                </div>
-            </div>
-
             </div>
             <!-- take a picture -->
-            <video id="video" height="200" autoplay></video>
+            <!-- <video id="video" height="200" autoplay></video>
             <button id="snap">take a photo</button>
-            <canvas id="canvas" data-hidden="true" width="640" height="480"></canvas>
+            <canvas id="canvas" data-hidden="true" width="640" height="480"></canvas> -->
 
 
 
@@ -280,11 +248,9 @@
 
         </section>
 
-        <section class="img-display">
             <img class="display-imgs" src="./assets/placeholder_img.png" alt="collectie retro fotos">
-        </section>
 
-        <section class="text2">
+        <section>
             <div>
                 <h3 class="grey">Blijf op de hoogte</h3>
                 <h2>digital natives nieuws</h2>
@@ -295,7 +261,6 @@
                 Digital Natives en bij onze klanten.</p>
 
             <a href="https://www.digitalnatives.nl/magazine/articles/digital-natives">Ontdek alle updates</a>
-
 
         </section>
 
