--- a/index.html
+++ b/index.html
@@ -265,8 +265,13 @@
         </div>
         <!-- take a picture -->
         <!-- <video id="video" height="200" autoplay></video>
-            <button id="snap">take a photo</button>
-            <canvas id="canvas" data-hidden="true" width="640" height="480"></canvas> -->
+        <button id="snap">take a photo</button>
+        <canvas
+          id="canvas"
+          data-hidden="true"
+          width="640"
+          height="480"
+        ></canvas> -->
       </section>
 
       <section class="text2">
